--- a/index.html
+++ b/index.html
@@ -197,9 +197,33 @@
        </div>
     </main>
    
-
+    <!-- SECTION TOOLS -->
    <div class="container-tools">
+        <div class="left-tools">
+            <div id="current-song">
+                <img id="img-current" src="img/sinister.jpeg" alt="">
+            </div>
+            <div id="info-brano">
+                <div>Sinister</div>
+                <div>Brano nome</div>
+            </div>
+            <div>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-folder"></i>
+            </div>
+            
+        </div>
+        <div class="middle-tools">
 
+        </div>
+        <div class="right-tools">
+           <div>
+            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-display"></i>
+            <i class="fa-solid fa-volume-high"></i>
+           </div>
+            
+        </div>
    </div>
 </body>
 </html>
