--- a/index.html
+++ b/index.html
@@ -204,17 +204,34 @@
                 <img id="img-current" src="img/sinister.jpeg" alt="">
             </div>
             <div id="info-brano">
-                <div>Sinister</div>
-                <div>Brano nome</div>
+                <div id="font-artist">Sinister</div>
+                <div id="font-brano">Brano nome</div>
             </div>
             <div>
-                <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart heart"></i>
                 <i class="fa-regular fa-folder"></i>
             </div>
             
         </div>
         <div class="middle-tools">
+            <div class="up-tools">
+                <i class="fa-solid fa-shuffle"></i>
+                <i class="fa-solid fa-backward-step"></i>
+                <i class="fa-regular fa-circle-play"></i>
+                <i class="fa-solid fa-forward-step"></i>
+                <i class="fa-solid fa-rotate-right "></i>
+            </div>
+            <div class="down-tools">
+                <div class="song-time">
+                    0.25
+                </div>
+                <div class="song-progress">
 
+                </div>
+                <div class="song-time">
+                    4.35
+                </div>
+            </div>
         </div>
         <div class="right-tools">
            <div>
@@ -222,7 +239,9 @@
             <i class="fa-solid fa-display"></i>
             <i class="fa-solid fa-volume-high"></i>
            </div>
+           <div class="volume-bar">
             
+            </div>
         </div>
    </div>
 </body>
